test/sema/comparison-of-non-comparable-types.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

struct X {}

void f(X* a, X* b) {
    // CHECK: [[@LINE+1]]:12: error: type 'X' doesn't implement interface 'Comparable'
    _ = *a < *b;
}
